# flct_destretch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: movie.py  movie_example.py
flctdestretch/: __init__.py  abstraction.py  algorithm.py  deprecated.py  destretch.py  destretch_params.py  destretch_types.py  processing.py  reference_method.py  utility.py
flctdestretch/examples/: analysis.ipynb  fits_to_mp4.py  flowmap.ipynb  movie.py  simple.ipynb  test.ipynb  testbed.ipynb  testbed.py  testbed_script.py
flctdestretch/examples/media/: test_1k_00.fits
